[package]
name = "helios"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
inventory = "0.3.20"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
